added whats next div

--- a/Bandtastic/Views/Home/Index.cshtml
+++ b/Bandtastic/Views/Home/Index.cshtml
@@ -85,6 +85,24 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col s12">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title">What's next?</span>
+                            <p id="whatsnext"></p>
+                            In order to progress this procurement, the following needs to occur:
+                            <ol>
+                                <li>The <b>author</b> needs to email the description of the Purchase Order</li>
+                                <li>The <b>Financial Delegate</b> needs to <b>review and approve</b> the purchase</li>
+                                <li>The <b>Procurement Delegate</b> needs to <b>review and approve</b> the purchase</li>
+                                <li>The <b>Asset Accounting Team</b> need to release the Purchase Order</li>
+                            </ol>
+                            @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </form>
 </div>
