changes as per BF requirements
"Type – could we please change to be “procurement type required”
•        One of the major things that this tool is to produce is a decision, if a BN (Briefing note) is required or not. And I love that you have the logic that does that ie:
o   If it is a type 4 procurement a BN is required fullstop – no exceptions – regardless of $ value
o   If not a type 4, a BN is NOT required if the $ value is less than $100k – if $ is above $100k then a BN IS Required
o   Are we able to pull out the fact that a BN is required or not to make it stand out more (like your bands)… It took me several goes before I noticed it told me a BN was required or not.
"

--- a/Bandtastic/Views/Home/Index.cshtml
+++ b/Bandtastic/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                         <option value="4">Type 4</option>
                         <option value="5">Type 5</option>
                     </select>
-                    <label>Type</label>
+                    <label>Procurement Type Required</label>
                 </div>
             </div>
 
@@ -79,13 +79,18 @@
                         <div class="card-content white-text">
                             <span class="card-title" id="procurementLevel"></span>
                             <p id="procurementLevelExplanation"></p>
-                            <p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>
+                            @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
                         </div>
 
                     </div>
                 </div>
             </div>
             <div class="row">
+                <div class="col s12">
+                    <div class="card-panel pink lighten-1" id="briefingnoterequired" style="display:none">
+                        <span class="white-text">This procurement <b>requires</b> a <b>briefing note</b>.
+                        </span>
+                    </div>
                 <div class="col s12">
                     <div class="card">
                         <div class="card-content">
