--- a/Bandtastic/Views/Home/Index.cshtml
+++ b/Bandtastic/Views/Home/Index.cshtml
@@ -7,9 +7,17 @@
 
 <!-- Compiled and minified CSS -->
 <!--   Icon Section   -->
+
+<input type="radio" name="type" value="1" />
+<input type="radio" name="type" value="2" />
+<input type="radio" name="type" value="3" />
+<input type="radio" name="type" value="4" />
+<input type="radio" name="type" value="5" />
+
+
 <div class="row">
     <form class="col s12">
-        <div class="row">
+        @*<div class="row">
 
             <div class="col s12">
                 <div class="input-field col s12">
@@ -22,6 +30,101 @@
                         <option value="5">Type 5</option>
                     </select>
                     <label>Procurement Type Required</label>
+                </div>
+            </div>
+
+        </div>*@
+        <div class="row">
+            <div class="col s12" id="type1description" data-type="1">
+                <div class="card blue-grey darken-1 info">
+                    <div class="card-content white-text">
+                        <span class="card-title">Type 1 - Procurement/purchase from competitive process</span>
+                        <div class="row center-align valign-wrapper">
+                            <div class="col s4">
+                                <i class="fa fa-users fa-5x"></i>
+                            </div>
+                            <div class="col s8">
+                                <p>Type 1 delegates have the authority to approve a procurement/purchase from competitive tenders, offers or quotes, including quotes from a register of pre-qualified supplier/s.</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col s12" id="type2description" data-type="2">
+                <div class="card blue-grey darken-1 info">
+                    <div class="card-content white-text">
+                        <span class="card-title">Type 2 - Purchase from an established Standing Offer Arrangement</span>
+                        <div class="row center-align valign-wrapper">
+                            <div class="col s4">
+                                <i class="fa fa-book fa-5x"></i>
+                            </div>
+                            <div class="col s8">
+                                <p>Type 2 delegates have the authority to approve a purchase from existing Standing offer arrangement/s (single supplier or panel).</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col s12" id="type3description" data-type="3">
+                <div class="card blue-grey darken-1 info">
+                    <div class="card-content white-text">
+                        <span class="card-title">Type 3 - Establishment of a Supply Arrangement</span>
+                        <div class="row center-align valign-wrapper">
+                            <div class="col s4">
+                                <i class="fa fa-handshake-o fa-5x"></i>
+                            </div>
+                            <div class="col s8">
+                                <p>Type 3 delegates have the authority to approve, following a competitive process, the establishment of a Standing offer arrangement or register of pre-qualified supplier/s.</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col s12" id="type4description" data-type="4">
+                <div class="card blue-grey darken-1 info">
+                    <div class="card-content white-text">
+                        <span class="card-title">Type 4 - Confined market</span>
+                        <div class="row center-align valign-wrapper">
+                            <div class="col s4">
+                                <i class="fa fa-diamond fa-5x"></i>
+                            </div>
+                            <div class="col s8">
+                                <p>Type 4 delegates have the authority to confine quotes/offers where there is a sole or limited source of supply or genuinely urgent situation. <b>Type 4 procurements always require a briefing note.</b></p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col s12" id="type5description" data-type="5">
+                <div class="card blue-grey darken-1 info">
+                    <div class="card-content white-text">
+                        <span class="card-title">Type 5 - Contracting</span>
+                        <div class="row center-align valign-wrapper">
+                            <div class="col s4">
+                                <i class="fa fa-pencil-square-o fa-5x"></i>
+                            </div>
+                            <div class="col s8">
+                                <p>
+                                    Type 5 delegates have the authority to bind the State to a procurement outcome or purchase by entering into a contract, including:<br />
+                                    <br />
+                                    •	issuing purchase order/s <br />
+                                    •	issuing of a letter of acceptance to a successful supplier<br />
+                                    •	signing a contract.<br />
+
+                                </p>
+                            </div>
+                        </div>
+
+
+                    </div>
                 </div>
             </div>
 
@@ -87,10 +190,16 @@
             </div>
             <div class="row">
                 <div class="col s12">
-                    <div class="card-panel pink lighten-1" id="briefingnoterequired" style="display:none">
-                        <span class="white-text">This procurement <b>requires</b> a <b>briefing note</b>.
-                        </span>
+                    <div class="card pink">
+                        <div class="card-content white-text">
+                            <span class="card-title">Briefing note required</span>
+                            <p>For this procurement, you are required to fill out a briefing note.</p>
+                        </div>
+                       
                     </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col s12">
                     <div class="card">
                         <div class="card-content">
@@ -119,6 +228,27 @@
         $(document).ready(function () {
             $('select').material_select();
 
+            $('div[id*="description"]').on('click',
+                function () {
+                    //$("div[class*='card']").switchClass('blue', 'blue-grey', 400);
+
+                    //console.log($("div[class*='info'][data-type!='" + $(this).data("type") + "']"));
+
+
+                    $(this).addClass('active');
+                    $(this).find("div[class*='info']").switchClass('blue-grey', 'blue', 0);
+                    //400, 'swing', function () {
+                    //$("div[class*='active'][data-type!='" + $(this).data("type") + "']").slideUp();
+                    $("div[class*='active'][data-type!='" + $(this).data("type") + "']").removeClass('active').find('div[class*="info"]').switchClass('blue', 'blue-grey', 0);
+                    //});
+                    console.log("input[value='" + $(this).data("type") + "']");
+                    $("input[value='" + $(this).data("type") + "'][type='radio']").prop("checked", true);
+                    console.log($("input[value='" + $(this).data("type") + "'][type='radio']"));
+                    //console.log($("input"));
+                    console.log($("input[name='type']:checked").val());
+                    getAppropriateProcurement();
+                });
+
             $("input").on('blur',
                 function () {
                     getAppropriateProcurement();
@@ -130,7 +260,8 @@
                 });
 
             function getAppropriateProcurement() {
-                if ($("#type").val() !== null &&
+                //if ($("#type").val() !== null &&
+                if ($("input[name='type']:checked").val() != null &&
                     $("#risk").val() !== null &&
                     $("#totalvalue").val() !== "" &&
                     $("#recurrency").val() !== null) {
@@ -140,12 +271,18 @@
                     var financialOverLimit = false;
                     var procurementAmount = Number(($("#totalvalue").val()));
                     var briefingNoteRequired = false;
-                    var procurementType = Number($("#type").val());
+                    //var procurementType = Number($("#type").val());
+                    var procurementType = Number($("input[name='type']:checked").val());
+                    console.log(procurementType);
                     var isRecurrent = $("#recurrency").val() === "recurrent"; // false if not recurrent
                     console.log($("#type").val());
 
                     if (procurementAmount > 100000) { // need briefing note for expenses more than $100,000
                         briefingNoteRequired = true;
+                    }
+
+                    if ($("#risk").val() > 1) {
+                        briefingNoteRequired = true; // med-high risk
                     }
 
                     if (procurementType !== 3 && procurementType !== 4) {
