--- a/Bandtastic/Views/Shared/_Layout.cshtml
+++ b/Bandtastic/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     @*@Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")*@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="~/Content/jquery-ui.min.css"/>
+   
 </head>
 <body>
     <nav class="green darken-1" role="navigation">
@@ -24,7 +27,7 @@
 
 
     @Scripts.Render("~/bundles/jquery")
-   
+   <script src="~/Scripts/jquery-ui.js"></script>
     @*@Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
