--- a/Bandtastic/Views/Home/Index.cshtml
+++ b/Bandtastic/Views/Home/Index.cshtml
@@ -15,9 +15,9 @@
 <input type="radio" name="type" value="5" />
 
 
-<div class="row">
-    <form class="col s12">
-        @*<div class="row">
+
+<form class="col s12">
+    @*<div class="row">
 
             <div class="col s12">
                 <div class="input-field col s12">
@@ -34,192 +34,195 @@
             </div>
 
         </div>*@
+<div class="row">
+    @*<h1 id="chooseProcType">Choose a procurement type</h1>*@
+        <a class="btn" id="resetType" style="display: none; width: 100%;">choose another type</a>
+        @*<input type="button" id="resetType" style="display:none" value="choose another type" />*@
+        <div class="col s12 info" id="type1description" data-type="1">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Type 1 - Procurement/purchase from competitive process</span>
+                    <div class="row center-align valign-wrapper">
+                        <div class="col s4">
+                            <i class="fa fa-users fa-5x"></i>
+                        </div>
+                        <div class="col s8">
+                            <p>Type 1 delegates have the authority to approve a procurement/purchase from competitive tenders, offers or quotes, including quotes from a register of pre-qualified supplier/s.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="col s12 info" id="type2description" data-type="2">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Type 2 - Purchase from an established Standing Offer Arrangement</span>
+                    <div class="row center-align valign-wrapper">
+                        <div class="col s4">
+                            <i class="fa fa-book fa-5x"></i>
+                        </div>
+                        <div class="col s8">
+                            <p>Type 2 delegates have the authority to approve a purchase from existing Standing offer arrangement/s (single supplier or panel).</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="col s12 info" id="type3description" data-type="3">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Type 3 - Establishment of a Supply Arrangement</span>
+                    <div class="row center-align valign-wrapper">
+                        <div class="col s4">
+                            <i class="fa fa-handshake-o fa-5x"></i>
+                        </div>
+                        <div class="col s8">
+                            <p>Type 3 delegates have the authority to approve, following a competitive process, the establishment of a Standing offer arrangement or register of pre-qualified supplier/s.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="col s12 info" id="type4description" data-type="4">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Type 4 - Confined market</span>
+                    <div class="row center-align valign-wrapper">
+                        <div class="col s4">
+                            <i class="fa fa-diamond fa-5x"></i>
+                        </div>
+                        <div class="col s8">
+                            <p>
+                                Type 4 delegates have the authority to confine quotes/offers where there is a sole or limited source of supply or genuinely urgent situation. <b>Type 4 procurements always require a briefing note.</b>
+                            </p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="col s12 info" id="type5description" data-type="5">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Type 5 - Contracting</span>
+                    <div class="row center-align valign-wrapper">
+                        <div class="col s4">
+                            <i class="fa fa-pencil-square-o fa-5x"></i>
+                        </div>
+                        <div class="col s8">
+                            <p>
+                                Type 5 delegates have the authority to bind the State to a procurement outcome or purchase by entering into a contract, including:<br />
+                                <br />
+                                • issuing purchase order/s <br />
+                                • issuing of a letter of acceptance to a successful supplier<br />
+                                • signing a contract.<br />
+
+                            </p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12">
+            <div class="input-field col s12">
+                <input placeholder="Total" type="number" id="totalvalue" type="text" class="validate">
+                <label for="totalvalue">Total Cumulative Value</label>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12">
+            <div class="input-field col s12">
+                <select id="risk">
+                    <option value="" disabled selected>Choose your option</option>
+                    <option value="1">Low</option>
+                    <option value="2">Medium</option>
+                    <option value="3">High</option>
+                </select>
+                <label>Risk</label>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col s12">
+            <div class="input-field col s12">
+                <select id="recurrency">
+                    <option value="" disabled selected>Choose your option</option>
+                    <option value="recurrent">Recurrent</option>
+                    <option value="nonrecurrent">Non-recurrent</option>
+                </select>
+                <label>Expenditure Type</label>
+            </div>
+        </div>
+
+    </div>
+    <div id="procurementNeeded" style="display:none">
         <div class="row">
-            <div class="col s12" id="type1description" data-type="1">
-                <div class="card blue-grey darken-1 info">
+
+            <div class="col s12 m6">
+                <div class="card black">
                     <div class="card-content white-text">
-                        <span class="card-title">Type 1 - Procurement/purchase from competitive process</span>
-                        <div class="row center-align valign-wrapper">
-                            <div class="col s4">
-                                <i class="fa fa-users fa-5x"></i>
-                            </div>
-                            <div class="col s8">
-                                <p>Type 1 delegates have the authority to approve a procurement/purchase from competitive tenders, offers or quotes, including quotes from a register of pre-qualified supplier/s.</p>
-                            </div>
-                        </div>
-
-
+                        <span class="card-title" id="financialLevel"></span>
+                        <p id="financialLevelExplanation"></p>
+                        @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
                     </div>
+
                 </div>
             </div>
-            <div class="col s12" id="type2description" data-type="2">
-                <div class="card blue-grey darken-1 info">
+            <div class="col s12 m6">
+                <div class="card blue darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Type 2 - Purchase from an established Standing Offer Arrangement</span>
-                        <div class="row center-align valign-wrapper">
-                            <div class="col s4">
-                                <i class="fa fa-book fa-5x"></i>
-                            </div>
-                            <div class="col s8">
-                                <p>Type 2 delegates have the authority to approve a purchase from existing Standing offer arrangement/s (single supplier or panel).</p>
-                            </div>
-                        </div>
-
-
+                        <span class="card-title" id="procurementLevel"></span>
+                        <p id="procurementLevelExplanation"></p>
+                        @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
                     </div>
+
                 </div>
             </div>
-            <div class="col s12" id="type3description" data-type="3">
-                <div class="card blue-grey darken-1 info">
-                    <div class="card-content white-text">
-                        <span class="card-title">Type 3 - Establishment of a Supply Arrangement</span>
-                        <div class="row center-align valign-wrapper">
-                            <div class="col s4">
-                                <i class="fa fa-handshake-o fa-5x"></i>
-                            </div>
-                            <div class="col s8">
-                                <p>Type 3 delegates have the authority to approve, following a competitive process, the establishment of a Standing offer arrangement or register of pre-qualified supplier/s.</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="col s12" id="type4description" data-type="4">
-                <div class="card blue-grey darken-1 info">
-                    <div class="card-content white-text">
-                        <span class="card-title">Type 4 - Confined market</span>
-                        <div class="row center-align valign-wrapper">
-                            <div class="col s4">
-                                <i class="fa fa-diamond fa-5x"></i>
-                            </div>
-                            <div class="col s8">
-                                <p>Type 4 delegates have the authority to confine quotes/offers where there is a sole or limited source of supply or genuinely urgent situation. <b>Type 4 procurements always require a briefing note.</b></p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="col s12" id="type5description" data-type="5">
-                <div class="card blue-grey darken-1 info">
-                    <div class="card-content white-text">
-                        <span class="card-title">Type 5 - Contracting</span>
-                        <div class="row center-align valign-wrapper">
-                            <div class="col s4">
-                                <i class="fa fa-pencil-square-o fa-5x"></i>
-                            </div>
-                            <div class="col s8">
-                                <p>
-                                    Type 5 delegates have the authority to bind the State to a procurement outcome or purchase by entering into a contract, including:<br />
-                                    <br />
-                                    •	issuing purchase order/s <br />
-                                    •	issuing of a letter of acceptance to a successful supplier<br />
-                                    •	signing a contract.<br />
-
-                                </p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-
         </div>
         <div class="row">
             <div class="col s12">
-                <div class="input-field col s12">
-                    <input placeholder="Total" type="number" id="totalvalue" type="text" class="validate">
-                    <label for="totalvalue">Total Cumulative Value</label>
+                <div class="card pink">
+                    <div class="card-content white-text">
+                        <span class="card-title">Briefing note required</span>
+                        <p>For this procurement, you are required to fill out a briefing note.</p>
+                    </div>
+
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col s12">
-                <div class="input-field col s12">
-                    <select id="risk">
-                        <option value="" disabled selected>Choose your option</option>
-                        <option value="1">Low</option>
-                        <option value="2">Medium</option>
-                        <option value="3">High</option>
-                    </select>
-                    <label>Risk</label>
-                </div>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <div class="input-field col s12">
-                    <select id="recurrency">
-                        <option value="" disabled selected>Choose your option</option>
-                        <option value="recurrent">Recurrent</option>
-                        <option value="nonrecurrent">Non-recurrent</option>
-                    </select>
-                    <label>Expenditure Type</label>
-                </div>
-            </div>
-
-        </div>
-        <div id="procurementNeeded" style="display:none">
-            <div class="row">
-
-                <div class="col s12 m6">
-                    <div class="card black">
-                        <div class="card-content white-text">
-                            <span class="card-title" id="financialLevel"></span>
-                            <p id="financialLevelExplanation"></p>
-                            @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col s12 m6">
-                    <div class="card blue darken-1">
-                        <div class="card-content white-text">
-                            <span class="card-title" id="procurementLevel"></span>
-                            <p id="procurementLevelExplanation"></p>
-                            @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="card pink">
-                        <div class="card-content white-text">
-                            <span class="card-title">Briefing note required</span>
-                            <p>For this procurement, you are required to fill out a briefing note.</p>
-                        </div>
-                       
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title">What's next?</span>
-                            <p id="whatsnext"></p>
-                            In order to progress this procurement, the following needs to occur:
-                            <ol>
-                                <li>The <b>author</b> needs to email the description of the Purchase Order</li>
-                                <li>The <b>Financial Delegate</b> needs to <b>review and approve</b> the purchase</li>
-                                <li>The <b>Procurement Delegate</b> needs to <b>review and approve</b> the purchase</li>
-                                <li>The <b>Asset Accounting Team</b> need to release the Purchase Order</li>
-                            </ol>
-                            @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
-                        </div>
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">What's next?</span>
+                        <p id="whatsnext"></p>
+                        In order to progress this procurement, the following needs to occur:
+                        <ol>
+                            <li>The <b>author</b> needs to email the description of the Purchase Order</li>
+                            <li>The <b>Financial Delegate</b> needs to <b>review and approve</b> the purchase</li>
+                            <li>The <b>Procurement Delegate</b> needs to <b>review and approve</b> the purchase</li>
+                            <li>The <b>Asset Accounting Team</b> need to release the Purchase Order</li>
+                        </ol>
+                        @*<p id="briefingnoterequired" style="display:none"><b>You also need to fill out a briefing note</b></p>*@
                     </div>
                 </div>
             </div>
         </div>
-    </form>
-</div>
+    </div>
+</form>
 
 
 @section scripts
@@ -236,16 +239,18 @@
 
 
                     $(this).addClass('active');
-                    $(this).find("div[class*='info']").switchClass('blue-grey', 'blue', 0);
+                    //$(this).find("div[class*='info']").switchClass('blue-grey', 'blue', 0);
                     //400, 'swing', function () {
-                    //$("div[class*='active'][data-type!='" + $(this).data("type") + "']").slideUp();
-                    $("div[class*='active'][data-type!='" + $(this).data("type") + "']").removeClass('active').find('div[class*="info"]').switchClass('blue', 'blue-grey', 0);
+                    console.log($("div[class*='info'][data-type!='" + $(this).data("type") + "']").find("div").first());
+                    $("div[class*='info'][data-type!='" + $(this).data("type") + "']").slideUp();
+                    //$("div[class*='active'][data-type!='" + $(this).data("type") + "']").removeClass('active').find('div[class*="info"]').switchClass('blue', 'blue-grey', 0);
                     //});
                     console.log("input[value='" + $(this).data("type") + "']");
                     $("input[value='" + $(this).data("type") + "'][type='radio']").prop("checked", true);
                     console.log($("input[value='" + $(this).data("type") + "'][type='radio']"));
                     //console.log($("input"));
                     console.log($("input[name='type']:checked").val());
+                    $("#resetType").show();
                     getAppropriateProcurement();
                 });
 
@@ -259,6 +264,12 @@
                     getAppropriateProcurement();
                 });
 
+            $("#resetType").on('click',
+                function () {
+                    $(this).hide();
+                    $("div[class*='info']").slideDown();
+
+                });
             function getAppropriateProcurement() {
                 //if ($("#type").val() !== null &&
                 if ($("input[name='type']:checked").val() != null &&
